# fms-dgt

./: .addlicense-header.txt  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS
concepts/architecture/: index.html
concepts/blocks/: index.html
concepts/databuilders/: index.html
concepts/dataloaders/: index.html
concepts/datastores/: index.html
concepts/observability/: index.html
concepts/rag/: index.html
concepts/tasks/: index.html
concepts/tools/: index.html
docs/: index.md  installation.md  studio.md  usage.md
docs/concepts/: architecture.md  blocks.md  databuilders.md  dataloaders.md  datastores.md  observability.md  rag.md  tasks.md
docs/examples/: chit_chat.md  instructlab.md  rag_multi_doc2dial.md  safety_refusal.md  simple_reasoning.md  time_series.md  tool_calling_multi_turn_stateless.md  transform_data.md  transform_your_data.md  write_your_own_databuilder.md
docs/tutorials/: adding_new_blocks.md  changing_lm_engine.md  creating_validator.md  generate_data.md  loading_seed_examples_from_file.md  transform_data.md
examples/chit_chat/: index.html
examples/generate_data/: index.html
examples/generate_qa_over_knowledge/: index.html
examples/instructlab/: index.html
examples/rag_multi_doc2dial/: index.html
examples/safety_refusal/: index.html
examples/simple_reasoning/: index.html
examples/time_series/: index.html
examples/transform_data/: index.html
fms_dgt/: __init__.py  __main__.py  constants.py  generate_data.py  index.py  utils.py
fms_dgt/base/: block.py  concurrency.py  data_objects.py  databuilder.py  dataloader.py  datastore.py  fanout_handler.py  formatter.py  multiprocessing.py  prompt.py  registry.py  resource.py  task.py  task_card.py  telemetry.py
fms_dgt/core/: __main__.py
fms_dgt/log/: __init__.py  context.py  filters.py  handlers.py
fms_dgt/public/: __main__.py
fms_dgt/studio/: launcher.py  server.py  utils.py
installation/: index.html
search/: search_index.json
studio/: eslint.config.mjs  index.html  next.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts
studio/types/: custom.ts
tests/: conftest.py
tests/base/: test_block.py  (+5 more)
usage/: index.html
(+477 files in other folders)
