[build-system]
requires = ["setuptools>=40.8.0", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dgt"
version = "0.1"
description = "A framework for synthetic data generation"
license = { "text" = "Apache-2.0" }
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache License",
]
requires-python = ">=3.10.15,<3.13"
dependencies = [
    "Jinja2",
    "psutil",
    "sqlitedict",
    "ray[default]",
    "python-dotenv",
    "pandas",
    "datasets",
    "rouge-score",
    "scikit-learn",
    "transformers",
    "openapi-schema-validator",
    "ibm-watsonx-ai",
    "openai", 
    "tiktoken",
    "python-dateutil",
    "tqdm"
]

[tool.setuptools.packages.find]
include = ["dgt*"]

# required to include yaml files in pip installation
[tool.setuptools.package-data]
dgt = ["**/*.yaml", "data/**/*"]

[project.scripts]
dgt = "dgt.research.__main__:main"

[project.urls]
Homepage = "https://github.com/IBM/dgt"
Repository = "https://github.com/IBM/dgt"

[project.optional-dependencies]
# Feature specific dependencies
vllm = ["vllm", "more_itertools"]
search = [
    "duckduckgo-search", # duckduckgo search engine API
    # document processing & website crawling
    "docling", 
    "firecrawl-py",
    "langchain-docling",
    # document retrieval
    "elasticsearch==8.2",
    "langchain", 
    "langchain-core",
    "langchain-text-splitters",
    "langchain-ibm",
    "langchain-openai", 
    "langchain-milvus"
]

# Pipeline specific dependencies

# namespace specific dependencies
public = [dgt[search], "lingua-language-detector"]

# Development setup dependencies
dev-test = ["pytest", "pytest-cov"]
dev-fmt = ["pre-commit", "ruff"]
dev-build = ["setuptools>=60", "setuptools-scm>=8.0"]

# Full install from end-user perspective
all = ["dgt[public]"]

# Full install from developer perspective
all-dev = ["dgt[all, dev-test, dev-fmt, dev-build]"]

[tool.ruff]
line-length = 100
target-version = "py310"
ignore = ["I001"] # Import block is un-sorted or un-formatted (clash with isort instead)

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401", # imported but unused
    "F403" # unable to detect undefined names
]
